--- a/profile/NewProfileWindow.xaml
+++ b/profile/NewProfileWindow.xaml
@@ -5,10 +5,10 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:pmis.profile"
         mc:Ignorable="d"
-        Title="New Profile" Height="146.805" Width="189.087" ResizeMode="NoResize" ShowInTaskbar="False" WindowStartupLocation="CenterScreen">
+        Title="New Profile" Height="146.805" Width="189.087" ResizeMode="NoResize" ShowInTaskbar="False" WindowStartupLocation="CenterScreen" Icon="/archive;component/resources/sangah_logo_16.ico">
     <Grid>
-        <Label Content="Profile Name" Margin="10,10,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" Height="26" Width="78"/>
-        <TextBox x:Name="profileNameTextBox" Margin="10,40,10.4,0" TextWrapping="Wrap" TextOptions.TextFormattingMode="Display" VerticalContentAlignment="Center" FontSize="14" TextChanged="profileNameTextBox_TextChanged" Height="23" VerticalAlignment="Top"/>
+        <Label Name="profileNameLabel" Content="Profile Name" Margin="10,10,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" Height="26" Width="78"/>
+        <TextBox x:Name="profileNameTextBox" Margin="10,40,10.4,0" TextWrapping="Wrap" TextOptions.TextFormattingMode="Display" VerticalContentAlignment="Center" FontSize="14" Height="23" VerticalAlignment="Top" MaxLength="20"/>
         <Grid Margin="10,68,10.4,12">
             <Button x:Name="createProfileCreateButton" Content="Create" Margin="0,0,0.2,0" Click="CreateProfileCreateButton_Click"/>
         </Grid>
