--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -10,7 +10,11 @@
         <TabControl x:Name="tabControl1" Margin="10,31,10,10">
             <TabItem x:Name="registerTabPage" Header="Register">
                 <Grid Background="White">
-                    <Grid Margin="0,0,0,390" HorizontalAlignment="Left" Width="862">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="111"/>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
+                    <Grid Margin="0,0,0,0" HorizontalAlignment="Left" Width="862" Height="172" VerticalAlignment="Top" Grid.ColumnSpan="2">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="133"/>
                             <ColumnDefinition Width="192"/>
@@ -18,28 +22,26 @@
                             <ColumnDefinition Width="248"/>
                             <ColumnDefinition Width="14*"/>
                         </Grid.ColumnDefinitions>
-                        <Label x:Name="searchDocNumberLabel" Content="Document Number" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,10,3,0" HorizontalContentAlignment="Right"/>
-                        <TextBox x:Name="srchNumber" Height="23" Margin="2,13,2,0" TextWrapping="Wrap" VerticalAlignment="Top" Grid.Column="1"/>
-                        <Label x:Name="searchDocTitleLabel" Content="Document Title" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,38,3,0" HorizontalContentAlignment="Right"/>
-                        <TextBox x:Name="srchTitle" Height="23" Margin="2,41,2,0" TextWrapping="Wrap" VerticalAlignment="Top" Grid.Column="1"/>
-                        <Label x:Name="searchRegisteredByLabel" Content="Registered By" VerticalAlignment="Top" Margin="0,66,3,0" HorizontalAlignment="Right" HorizontalContentAlignment="Right"/>
-                        <TextBox x:Name="srchRegisteredBy" Height="23" Margin="2,69,2,0" TextWrapping="Wrap" VerticalAlignment="Top" Grid.Column="1"/>
-                        <Label x:Name="searchDocTypeLabel" Content="Document Type" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,10,0,0" Grid.Column="2" HorizontalContentAlignment="Right"/>
-                        <Label x:Name="searchDocDisciplineLabel" Content="Document Discipline" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,38,0,0" Grid.Column="2" HorizontalContentAlignment="Right"/>
-                        <Label x:Name="searchDocStatusLabel" Content="Document Status" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,66,0,0" Grid.Column="2" HorizontalContentAlignment="Right"/>
-                        <ComboBox x:Name="srchType" Margin="5,14,10,0" VerticalAlignment="Top" Grid.Column="3" Height="22" DisplayMemberPath="[name]" SelectedValuePath="[code]" />
-                        <ComboBox x:Name="srchDiscipline" Margin="5,41,10,0" VerticalAlignment="Top" Grid.Column="3" Height="22"/>
-                        <ComboBox x:Name="srchStatus" Margin="5,69,10,0" VerticalAlignment="Top" Grid.Column="3" Height="22"/>
-                        <Label x:Name="searchFromLabel" Content="From" VerticalAlignment="Top" Margin="27,96,69,0" HorizontalContentAlignment="Right"/>
-                        <DatePicker x:Name="srchFromDate" Margin="69,97,154,0" VerticalAlignment="Top" Grid.ColumnSpan="2"/>
-                        <Label x:Name="searchToLabel" Content="To" VerticalAlignment="Top" Margin="61,96,108,0" Grid.Column="1" HorizontalContentAlignment="Right"/>
-                        <DatePicker x:Name="srchToDate" Margin="89,97,1,0" VerticalAlignment="Top" RenderTransformOrigin="2.216,0.833" Grid.Column="1"/>
-                        <Label x:Name="searchHistoryLabel" Content="History" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="96,96,0,0" Grid.Column="2" HorizontalContentAlignment="Right"/>
-                        <ComboBox x:Name="srchHistory" Margin="5,97,10,0" VerticalAlignment="Top" Grid.Column="3"/>
-                        <Button x:Name="searchButton" Content="Search" Margin="18.2,55,0,0" Click="searchButton_Click" Background="#FFDDDDDD" BorderBrush="Gray" Grid.Column="4" HorizontalAlignment="Left" Width="104" Height="36" VerticalAlignment="Top"/>
-                        <Button x:Name="searchClearButton" Content="Clear" Margin="18.2,96,0,0" Click="searchClearButton_Click" Grid.Column="4" Height="23" VerticalAlignment="Top" HorizontalAlignment="Left" Width="75"/>
+                        <Label x:Name="searchDocNumberLabel" Content="Document Number" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,52,2.8,0" HorizontalContentAlignment="Right"/>
+                        <TextBox x:Name="srchNumber" Height="23" Margin="1.2,55,2.8,0" TextWrapping="Wrap" VerticalAlignment="Top" Grid.Column="1"/>
+                        <Label x:Name="searchDocTitleLabel" Content="Document Title" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,80,2.8,0" HorizontalContentAlignment="Right"/>
+                        <TextBox x:Name="srchTitle" Height="23" Margin="1.2,83,2.8,0" TextWrapping="Wrap" VerticalAlignment="Top" Grid.Column="1"/>
+                        <Label x:Name="searchRegisteredByLabel" Content="Registered By" VerticalAlignment="Top" Margin="0,108,2.8,0" HorizontalAlignment="Right" HorizontalContentAlignment="Right"/>
+                        <TextBox x:Name="srchRegisteredBy" Height="23" Margin="1.2,111,2.8,0" TextWrapping="Wrap" VerticalAlignment="Top" Grid.Column="1"/>
+                        <Label x:Name="searchDocDisciplineLabel" Content="Document Discipline" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,52,247.8,0" Grid.Column="2" HorizontalContentAlignment="Right" Grid.ColumnSpan="2"/>
+                        <Label x:Name="searchDocStatusLabel" Content="Document Status" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,80,247.8,0" Grid.Column="2" HorizontalContentAlignment="Right" Grid.ColumnSpan="2"/>
+                        <ComboBox x:Name="srchDiscipline" Margin="5.2,55,9.8,0" VerticalAlignment="Top" Grid.Column="3" Height="22"/>
+                        <ComboBox x:Name="srchStatus" Margin="5.2,83,9.8,0" VerticalAlignment="Top" Grid.Column="3" Height="22"/>
+                        <Label x:Name="searchFromLabel" Content="From" VerticalAlignment="Top" Margin="27,138,68.8,0" HorizontalContentAlignment="Right"/>
+                        <DatePicker x:Name="srchFromDate" Margin="69,139,153.8,0" VerticalAlignment="Top" Grid.ColumnSpan="2"/>
+                        <Label x:Name="searchToLabel" Content="To" VerticalAlignment="Top" Margin="61.2,138,107.8,0" Grid.Column="1" HorizontalContentAlignment="Right"/>
+                        <DatePicker x:Name="srchToDate" Margin="89.2,139,0.8,0" VerticalAlignment="Top" RenderTransformOrigin="2.216,0.833" Grid.Column="1"/>
+                        <Label x:Name="searchHistoryLabel" Content="History" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,110,247.8,0" Grid.Column="2" HorizontalContentAlignment="Right" Grid.ColumnSpan="2"/>
+                        <ComboBox x:Name="srchHistory" Margin="5.2,111,9.8,0" VerticalAlignment="Top" Grid.Column="3"/>
+                        <Button x:Name="searchButton" Content="Search" Margin="18.2,69,0,0" Click="searchButton_Click" Background="#FFDDDDDD" BorderBrush="Gray" Grid.Column="4" HorizontalAlignment="Left" Width="104" Height="36" VerticalAlignment="Top"/>
+                        <Button x:Name="searchClearButton" Content="Clear" Margin="18.2,110,0,0" Click="searchClearButton_Click" Grid.Column="4" Height="23" VerticalAlignment="Top" HorizontalAlignment="Left" Width="75"/>
                     </Grid>
-                    <DataGrid x:Name="registerDataGridView" Margin="0,134,0,0" IsReadOnly="True" CanUserResizeRows="False" HeadersVisibility="Column" MouseDoubleClick="registerDataGridView_MouseDoubleClick" MinRowHeight="30" HorizontalGridLinesBrush="Gray" VerticalGridLinesBrush="Gray" CellStyle="{StaticResource Body_Content_DataGrid_Centering}">
+                    <DataGrid x:Name="registerDataGridView" Margin="0,177,0.2,0" IsReadOnly="True" CanUserResizeRows="False" HeadersVisibility="Column" MouseDoubleClick="registerDataGridView_MouseDoubleClick" MinRowHeight="30" HorizontalGridLinesBrush="Gray" VerticalGridLinesBrush="Gray" CellStyle="{StaticResource Body_Content_DataGrid_Centering}" Grid.ColumnSpan="2">
                         <DataGrid.Columns>
                             <DataGridTextColumn x:Name="doclist_docno" Binding="{Binding [docno]}" ClipboardContentBinding="{x:Null}" Header="Document Number" Width="0.2*"/>
                             <DataGridTextColumn x:Name="doclist_title" Binding="{Binding [title]}" ClipboardContentBinding="{x:Null}" Header="Title" Width="0.4*"/>
@@ -55,6 +57,15 @@
                             <DataGridTextColumn x:Name="doclist_status" Binding="{Binding [doc_status]}" ClipboardContentBinding="{x:Null}" Header="Status" Width="100"/>
                         </DataGrid.Columns>
                     </DataGrid>
+                    <Label x:Name="searchDocTypeLabel" Content="Document Type" VerticalAlignment="Top" Margin="0,8,8.2,0" HorizontalContentAlignment="Right" HorizontalAlignment="Right" Width="93"/>
+                    <ComboBox x:Name="srchType" Margin="108,12,0,0" VerticalAlignment="Top" Height="22" DisplayMemberPath="[name]" SelectedValuePath="[code]" HorizontalAlignment="Left" Width="170" SelectionChanged="srchType_SelectionChanged" Grid.ColumnSpan="2" />
+                    <ComboBox x:Name="srchType2" Margin="183.8,12,0,0" VerticalAlignment="Top" Height="22" DisplayMemberPath="[name]" SelectedValuePath="[code]" HorizontalAlignment="Left" Width="170" SelectionChanged="srchType2_SelectionChanged" Grid.Column="1" />
+                    <ComboBox x:Name="srchType3" Margin="371.8,12,0,0" VerticalAlignment="Top" Height="22" DisplayMemberPath="[name]" SelectedValuePath="[code]" HorizontalAlignment="Left" Width="170" SelectionChanged="srchType3_SelectionChanged" Grid.Column="1" />
+                    <ComboBox x:Name="srchType4" Margin="559.8,12,0,0" VerticalAlignment="Top" Height="22" DisplayMemberPath="[name]" SelectedValuePath="[code]" HorizontalAlignment="Left" Width="170" Grid.Column="1" />
+                    <Separator Height="23" Margin="10,34,10.2,0" VerticalAlignment="Top" Grid.ColumnSpan="2"/>
+                    <Label Content="&gt;" Grid.Column="1" HorizontalAlignment="Left" Margin="166.8,10,0,0" VerticalAlignment="Top" FontWeight="Bold"/>
+                    <Label Content="&gt;" Grid.Column="1" HorizontalAlignment="Left" Margin="353.8,10,0,0" VerticalAlignment="Top" FontWeight="Bold"/>
+                    <Label Content="&gt;" Grid.Column="1" HorizontalAlignment="Left" Margin="541.8,10,0,0" VerticalAlignment="Top" FontWeight="Bold"/>
                 </Grid>
             </TabItem>
             <TabItem x:Name="detailTabPage" Header="Detail">
