--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -27,7 +27,7 @@
                         <Label x:Name="searchDocTypeLabel" Content="Document Type" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,10,0,0" Grid.Column="2" HorizontalContentAlignment="Right"/>
                         <Label x:Name="searchDocDisciplineLabel" Content="Document Discipline" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,38,0,0" Grid.Column="2" HorizontalContentAlignment="Right"/>
                         <Label x:Name="searchDocStatusLabel" Content="Document Status" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,66,0,0" Grid.Column="2" HorizontalContentAlignment="Right"/>
-                        <ComboBox x:Name="srchType" Margin="5,14,10,0" VerticalAlignment="Top" Grid.Column="3" Height="22" DisplayMemberPath="[name]" SelectedValuePath="[code]"/>
+                        <ComboBox x:Name="srchType" Margin="5.2,14,23.4,0" VerticalAlignment="Top" Grid.Column="3" Height="22" DisplayMemberPath="[name]" SelectedValuePath="[code]" Grid.ColumnSpan="2"/>
                         <ComboBox x:Name="srchDiscipline" Margin="5,41,10,0" VerticalAlignment="Top" Grid.Column="3" Height="22"/>
                         <ComboBox x:Name="srchStatus" Margin="5,69,10,0" VerticalAlignment="Top" Grid.Column="3" Height="22"/>
                         <Label x:Name="searchFromLabel" Content="From" VerticalAlignment="Top" Margin="27,96,69,0" HorizontalContentAlignment="Right"/>
